# vcs_toolchains

./: .gitignore  CMakeLists.txt  build.bat  build.py  build_and_run_linux.sh  orig_CMakeLists.txt
.xet/: config.toml
sample_cpp_app/: main.cpp  simple.c  simple.cpp
toolchains/linux/: vendor.py
toolchains/linux/LLVM/include/clang/AST/: Attrs.inc  Type.h
toolchains/linux/LLVM/include/clang/Basic/: DiagnosticIndexName.inc  arm_sve_builtins.inc  riscv_vector_builtin_cg.inc
toolchains/linux/LLVM/include/clang/Config/: config.h
toolchains/linux/LLVM/include/clang/Sema/: Sema.h
toolchains/linux/LLVM/include/lldb/Host/: Config.h
toolchains/linux/LLVM/include/llvm/Config/: llvm-config.h
toolchains/linux/LLVM/include/llvm/IR/: IntrinsicsVEVL.gen.td  IntrinsicsX86.td
toolchains/linux/LLVM/include/llvm/Support/: VCSRevision.h
toolchains/linux/LLVM/include/mlir/Conversion/: Passes.capi.h.inc
toolchains/linux/LLVM/include/mlir/IR/: BuiltinAttributes.h.inc  BuiltinOps.cpp.inc  BuiltinOps.h.inc  FunctionOpInterfaces.h.inc
toolchains/linux/LLVM/include/mlir/Interfaces/: ControlFlowInterfaces.cpp.inc  DestinationStyleOpInterface.cpp.inc  LoopLikeInterface.cpp.inc
toolchains/linux/LLVM/include/mlir/Transforms/: Transforms.capi.cpp.inc
toolchains/linux/LLVM/lib/: libclang-cpp.so.17  libclang.so.17  libclang.so.17.0.6  liblldb.so.17  liblldb.so.17.0.6  libmlir_async_runtime.so.17  libmlir_float16_utils.so.17  libomptarget-amdgpu-gfx1030.bc  libomptarget-amdgpu-gfx1033.bc  libomptarget-amdgpu-gfx1034.bc  libomptarget-amdgpu-gfx1101.bc  libomptarget-amdgpu-gfx1103.bc  libomptarget-amdgpu-gfx701.bc  libomptarget-amdgpu-gfx801.bc  libomptarget-amdgpu-gfx906.bc  libomptarget-amdgpu-gfx908.bc  libomptarget-amdgpu-gfx90a.bc  libomptarget-amdgpu-gfx90c.bc  libomptarget-amdgpu-gfx940.bc  libomptarget-nvptx-sm_50.bc  libomptarget-nvptx-sm_60.bc  libomptarget-nvptx-sm_61.bc  libomptarget-nvptx-sm_70.bc  libomptarget-nvptx-sm_72.bc  libomptarget-nvptx-sm_75.bc  libomptarget-nvptx-sm_86.bc  libomptarget-nvptx-sm_89.bc  libomptarget-nvptx-sm_90.bc  libomptarget.rtl.amdgpu.so.17  libomptarget.rtl.cuda.so.17
toolchains/linux/LLVM/lib/cmake/flang/: FlangConfig.cmake  FlangConfigVersion.cmake  FlangTargets.cmake
toolchains/linux/LLVM/lib/cmake/lld/: LLDConfig.cmake  LLDTargets.cmake
toolchains/linux/LLVM/lib/cmake/llvm/: LLVMConfig.cmake  LLVMExports-release.cmake  LLVMExports.cmake
toolchains/linux/LLVM/share/scan-build/: sorttable.js
toolchains/linux/cmake/doc/cmake/: CMake.qch
toolchains/linux/cmake/doc/cmake/html/: index.html  objects.inv  search.html  searchindex.js
toolchains/linux/cmake/man/man1/: ccmake.1  cmake-gui.1
toolchains/linux/cmake/man/man7/: cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-generators.7  cmake-packages.7  cmake-properties.7  cmake-qt.7  cmake-variables.7
toolchains/linux/cmake/share/cmake-3.28/Templates/: CMakeVSMacros1.vsmacros
toolchains/linux/ninja/: ninja
toolchains/linux/scripts/: zig_ar  zig_cc  zig_cc.sh  zig_cxx  zig_cxx.sh  zig_ranlib
toolchains/linux/ubuntu/LLVM/include/flang/: Version.inc
toolchains/linux/ubuntu/LLVM/lib/: libLTO.so.17  libRemarks.so.17  liblldbIntelFeatures.so.17  libmlir_c_runner_utils.so.17  libmlir_runner_utils.so.17  libomptarget-amdgpu-gfx1010.bc  libomptarget-amdgpu-gfx1031.bc  libomptarget-amdgpu-gfx1032.bc  libomptarget-amdgpu-gfx1035.bc  libomptarget-amdgpu-gfx1036.bc  libomptarget-amdgpu-gfx1100.bc  libomptarget-amdgpu-gfx1102.bc  libomptarget-amdgpu-gfx1150.bc  libomptarget-amdgpu-gfx1151.bc  libomptarget-amdgpu-gfx700.bc  libomptarget-amdgpu-gfx803.bc  libomptarget-amdgpu-gfx900.bc  libomptarget-amdgpu-gfx902.bc  libomptarget-nvptx-sm_35.bc  libomptarget-nvptx-sm_37.bc  libomptarget-nvptx-sm_52.bc  libomptarget-nvptx-sm_53.bc  libomptarget-nvptx-sm_62.bc  libomptarget-nvptx-sm_80.bc  libomptarget-nvptx-sm_87.bc  libomptarget.rtl.x86_64.so.17  libomptarget.so.17
toolchains/linux/ubuntu/LLVM/lib/x86_64-unknown-linux-gnu/: libc++.so.1.0  libc++abi.so.1.0  libunwind.so.1.0
toolchains/linux/ubuntu/cmake/man/man1/: cmake.1  cpack.1  ctest.1
toolchains/linux/ubuntu/cmake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-language.7  cmake-modules.7  cmake-policies.7  (+4 more)
toolchains/linux/zig/: zig
toolchains/linux/zig/doc/: langref.html
toolchains/linux/zig/doc/std/: data.js
toolchains/linux/zig/lib/docs/: commonmark.js
toolchains/linux/zig/lib/include/: arm_neon.h  avx512fintrin.h  avx512vlintrin.h  vecintrin.h
toolchains/linux/zig/lib/std/: os.zig
toolchains/win/Python311/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _msi.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _uuid.pyd  _zoneinfo.pyd  pyexpat.pyd  python.cat  select.pyd  unicodedata.pyd  winsound.pyd
toolchains/win/cmake/doc/cmake/: CMake.qch  Copyright.txt
toolchains/win/cmake/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
toolchains/win/cmake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
toolchains/win/mingw64/: build-info.txt
toolchains/win/mingw64/opt/include/: sqlite3.h
toolchains/win/mingw64/x86_64-w64-mingw32/include/: activdbg.h  d3d11.h  d3d11_3.h  d3d12.h  d3drmobj.h  dwrite_3.h  iads.h  mfidl.h  msctf.h  mshtmdid.h  mshtml.h  mshtmlc.h  msxml.h  msxml2.h  objidl.h  oledb.h  rtccore.h  sapi51.h  sapi53.h  sapi54.h  shldisp.h  shobjidl.h  strmif.h  tuner.h  urlmon.h  wbemdisp.h  wdstptmgmt.h  wincodec.h  windows.gaming.input.h  windows.media.speechrecognition.h  winnt.h  wmp.h  wmsdkidl.h  wuapi.h  xaudio2.h  xpsobjectmodel.h
(+6184 files in other folders)
